<resources>
    <string name="app_name">Mainland RP</string>
    <string name="brand_studio">ËLÎVÊẞ GAMEZ</string>
    <string name="brand_tagline">HOPE BILLION</string>

    <string name="login_title">Sign in to Mainland RP</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">CREATE ACCOUNT</string>
    <string name="toggle_to_register">Need an account? Register</string>
    <string name="toggle_to_login">Already have an account? Login</string>

    <string name="server_name">MAINLAND RP</string>
    <string name="btn_play">PLAY</string>
    <string name="status_checking">Checking server status…</string>

    <string name="cc_title">CREATE YOUR CHARACTER</string>
    <string name="cc_subtitle">This is who you\'ll be in Mainland RP</string>
    <string name="cc_first_name">First name</string>
    <string name="cc_last_name">Last name</string>
    <string name="cc_male">MALE</string>
    <string name="cc_female">FEMALE</string>
    <string name="btn_enter_world">ENTER MAINLAND RP</string>

    <string name="hud_permission_needed">Allow Mainland RP to draw the HUD over the game</string>
    <string name="hud_grant_permission">GRANT OVERLAY PERMISSION</string>
    <string name="hud_launch_game">LAUNCH GAME + HUD</string>
</resources>
